# cloud-sizing-scripts

./: .gitignore  README.md  cloudsizing_common.py  pyproject.toml  requirements.txt
AWS/: CVAWSCloudSizingScript.py  README.md  pyproject.toml
Azure/: CVAzureCloudSizingScript.py  README.md  pyproject.toml
old/AWS/: CVAWSCloudSizingScript.ps1  README.md
old/Azure/: CVAzureCloudSizingScript.ps1  README.md
old/GoogleCloud/: CVGoogleCloudSizingScript.ps1  README.md
old/OCI/: CVOracleCloudSizingScript.py  README.md  pyproject.toml
